--- a/b2/makefile
+++ b/b2/makefile
@@ -1,2 +1,5 @@
-gauss: gauss.cpp
+gauss: gauss.cpp cgauss
 	g++ gauss.cpp -o gauss -O3 -funroll-loops
+
+cgauss: gauss_c.cpp
+	g++ gauss_c.cpp -o cgauss -O3 -funroll-loops
