--- a/b3/makefile
+++ b/b3/makefile
@@ -1,6 +1,15 @@
-all: a b
+all: a b c d e
 a: a2uebung8.c 
 	g++ a2uebung8.c -o a -O3 -funroll-loops -fopenmp
 
-b: a2uebung8_dyn.c
-	g++ a2uebung8_dyn.c -o b -O3 -funroll-loops -fopenmp
+b: a2uebung8_stat13.c
+	g++ a2uebung8_stat13.c -o stat13 -O3 -funroll-loops -fopenmp
+
+c: a2uebung8_stat102.c
+	g++ a2uebung8_stat102.c -o stat102 -O3 -funroll-loops -fopenmp
+
+d: a2uebung8_dyn13.c
+	g++ a2uebung8_dyn13.c -o dyn13 -O3 -funroll-loops -fopenmp
+
+e: a2uebung8_dyn102.c
+	g++ a2uebung8_dyn102.c -o dyn102 -O3 -funroll-loops -fopenmp
