--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
+# Executables
 b1/mm
 b2/gauss
 b2/cgauss
+b4/threadtools/example
+b4/threadtools/checkpeterson
+b4/threadtools/peterson
+b4/threadtools/ring
+b4/threadtools/scalarproduct
+
+
+# Binaries
+*.o
 
 # tempfiles
 *[~#]
