Semaphoren Comments aufgeraeumt ProdCons gefixt

--- a/b4/threadtools/Makefile
+++ b/b4/threadtools/Makefile
@@ -43,7 +43,7 @@ $(RING_APPL) : $(RING_OBJECTS) Makefile
 	$(LINK) $(LLDFLAGS) -o $(RING_APPL) $(RING_OBJECTS) $(LIBS)
 
 $(PRODCONS_APPL) : $(PRODCONS_OBJECTS) Makefile
-	$(LINK) $(LLDFLAGS) -o $(PRODCONS_APPL) $(PRODCONS_OBJECTS) $(LIBS)
+	$(LINK) $(LLDFLAGS) -o $(PRODCONS_APPL) $(PRODCONS_OBJECTS) $(LIBS) -g
 
 .c.o:
 	$(COMPILE) $(CFLAGS) $<
