--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ b4/threadtools/checkpeterson
 b4/threadtools/peterson
 b4/threadtools/ring
 b4/threadtools/scalarproduct
+b4/threadtools/producerconsumer
+b4/goldbach
 
 
 # Binaries
