--- a/b6/Makefile
+++ b/b6/Makefile
@@ -1,8 +1,12 @@
 JACOBI = jacobi
+JACOBI_SEQ = jacobi_seq
 
-all: jacobi2.c
-	mpicc jacobi2.c -o $(JACOBI)
+all: jacobi3.c
+	mpicc jacobi3.c -o $(JACOBI)
+
+seq: jacobi.c
+	gcc jacobi.c -o $(JACOBI_SEQ)
 
 clean:
 	rm -f *.o
-	rm -f $(JACOBI)
+	rm -f $(JACOBI) $(JACOBI_SEQ)
