--- a/b6/Makefile
+++ b/b6/Makefile
@@ -1,12 +1,5 @@
-JACOBI = jacobi
-JACOBI_SEQ = jacobi_seq
-
-all: jacobi3.c
-	mpicc jacobi3.c -o $(JACOBI)
-
-seq: jacobi.c
-	gcc jacobi.c -o $(JACOBI_SEQ)
-
-clean:
-	rm -f *.o
-	rm -f $(JACOBI) $(JACOBI_SEQ)
+all: jm js
+jm: jacobi_mpi.c
+	mpicxx -o jm jacobi_mpi.c
+js: jacobi.c
+	mpicxx -o js jacobi.c
