--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ b5/u14/pis
 b5/u14/pim
 b6/js
 b6/jm
+b11/nbody_mpi
+b11/nbody_openmp
+b11/nbody_tiled
+b11/nbody_vanilla
 
 
 # Binaries
@@ -26,3 +30,4 @@ mpihosts
 .nfs*
 PI*
 a.out
+*.vtk
