--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ b11/nbody_mpi
 b11/nbody_openmp
 b11/nbody_tiled
 b11/nbody_vanilla
+b11/nbody_mpi_a
 
 
 # Binaries
@@ -31,3 +32,7 @@ mpihosts
 PI*
 a.out
 *.vtk
+p.*
+s.*
+ps.*
+pa.*
